# type_and_structura_data

lab1/: arifmetic_action.h  do_bigger.h  func_helper.h  get_exponent.h  is_correct_number.h  main.c  print_big_num.h  print_law_of_entering_value.h  round_big_int.h  utils.h
lab2/: add_file.h  data.csv  helper_func.h  main.c  menu.h  print_file.h  read_csv_file.h  remove_element_from_struct.h  st_key.h  st_search.h  st_sort.h  timer.h  utils.h
lab3/: CMakeLists.txt  error.h  get_matrix.h  init_matrix.h  lib_matrix_memory.h  limitation.h  main.c  menu.h  print_matrix.h  sm_copy_dolled.h  struct.h  sum_matrix.h  timer.h
lab4/программа/: delete_matrix.h  errors.h  fill_stack.h  lib_stack_memory.h  limitation.h  list_stack_operation.h  main.c  menu.h  print_struct.h  stack_struct.h  timer.h
lab5/: CMakeLists.txt  makefile
lab5/inc/: arr_que_operation.h  errors.h  list_que_operation.h  menu.h  print.h  process.h  que_struct.h  timer.h  utils.h
lab5/src/: arr_que_operation.c  list_que_operation.c  main.c  menu.c  print.c  process.c  timer.c  utils.c
lab6/programm/: errors.c  errors.h  hash_table.c  hash_table.h  io.c  io.h  lib_tree_oper.c  lib_tree_oper.h  main.c  process.c  process.h  struct.h  tree.txt
